# DevTrack

./: .dockerignore  .env.docker.example  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOY_GUIDE.md  DOCKER_README.md  EMAIL_DUPLICATE_NOTIFICATION.md  GUIA_LOCAL.md  LICENSE  NOTIFICATION_FIX.md  PASSWORD_CHANGE_NOTIFICATION.md  PASSWORD_RECOVERY.md  PRD.md  Procfile  README.md  RESULTS_COUNTER_FIX.md  ROLE_BASED_VIEWS.md  SOLUCION_DATOS_PRUEBA.md  TURNSTILE_SETUP.md  create_superuser_remote.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  install_linux_mac.sh  install_windows.bat  manage.py  nixpacks.toml  railway.toml  render.yaml  requirements.txt  start.sh  test_sample_data.bat
backend/: .coveragerc  .env.example  Dockerfile  Dockerfile.dev  Procfile  RATE_LIMITING_DOCS.md  RATE_LIMITING_QUICKSTART.md  RATE_LIMITING_SUMMARY.md  RATE_LIMITING_VISUAL.md  TESTING_COVERAGE_REPORT.md  TEST_FIXES_SUMMARY.md  backup_remote_db.ps1  build.sh  check_env.py  conftest.py  entrypoint.sh  gunicorn.conf.py  import_student_results.py  nixpacks.toml  pyproject.toml  pytest.ini  railway.json  railway.toml  requirements.dev.txt  requirements.txt  start.sh  test_google_auth_setup.py  test_rate_limit_simple.py
backend/accounts/: admin.py  models.py  permissions.py  ratelimit.py  serializers.py  urls.py  utils.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_emailverificationcode.py  0003_teacherinvitationcode.py  0004_rename_used_emailverificationcode_is_used_and_more.py  0005_user_session_timeout.py  0006_contactmessage.py
backend/backend/: requirements.txt
backend/config/: __init__.py  settings.py  urls.py
backend/courses/: __init__.py  admin.py  ai_service.py  apps.py  models.py  permissions.py  serializers.py  services.py  signals.py  urls.py  validators.py  views.py
backend/messaging/: models.py  serializers.py  signals.py  urls.py  views.py
backend/notifications/: admin.py  models.py  serializers.py  urls.py  views.py
backend/scripts/: restore_db.ps1
dashboard/: urls.py  (+1 more)
(+148 files in other folders)
