[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.9.1",
    "attrs==25.3.0",
    "boto3==1.41.5",
    "botocore==1.41.5",
    "certifi==2025.8.3",
    "cffi==2.0.0",
    "charset-normalizer==3.4.3",
    "colorama==0.4.6",
    "coverage==7.10.7",
    "cryptography==43.0.1",
    "defusedxml==0.7.1",
    "dj-database-url==3.0.1",
    "django==5.0.6",
    "django-cors-headers==4.3.1",
    "django-csp==3.8",
    "django-ratelimit==4.1.0",
    "django-storages==1.14.6",
    "djangorestframework==3.15.2",
    "djangorestframework-simplejwt==5.3.1",
    "drf-spectacular==0.27.2",
    "factory-boy==3.3.0",
    "faker==22.6.0",
    "filetype==1.2.0",
    "git-filter-repo==2.47.0",
    "google-auth==2.29.0",
    "google-genai>=1.55.0",
    "gunicorn==21.2.0",
    "httpie==3.2.4",
    "idna==3.10",
    "inflection==0.5.1",
    "iniconfig==2.1.0",
    "jmespath==1.0.1",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "markdown-it-py==4.0.0",
    "mdurl==0.1.2",
    "multidict==6.6.4",
    "packaging==25.0",
    "pluggy==1.6.0",
    "psycopg-binary==3.2.3",
    "psycopg2-binary==2.9.10",
    "pycparser==2.23",
    "pygments==2.19.2",
    "pyjwt==2.10.1",
    "pymysql==1.1.0",
    "pypdf>=6.7.0",
    "pysocks==1.7.1",
    "pytest==8.0.0",
    "pytest-cov==4.1.0",
    "pytest-django==4.8.0",
    "python-dateutil==2.9.0.post0",
    "python-docx>=1.2.0",
    "python-dotenv==1.0.1",
    "python-http-client==3.3.7",
    "pyyaml==6.0.2",
    "referencing==0.36.2",
    "requests==2.31.0",
    "requests-toolbelt==1.0.0",
    "rich==14.1.0",
    "rpds-py==0.27.1",
    "s3transfer==0.15.0",
    "sendgrid==6.11.0",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sqlparse==0.5.3",
    "starkbank-ecdsa==2.2.0",
    "tzdata==2025.2",
    "uritemplate==4.2.0",
    "urllib3==2.5.0",
    "whitenoise==6.6.0",
]
